--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="boton" onclick=getFullDocument()>Documento</button>
             <button class="boton" onclick=getAllMolecules()>Moleculas</button>
             <button class="boton" onclick=renderAll()>Painter All</button>
-            <button class="boton" onclick=renderFirst()>Render</button>
+            <button class="boton" onclick=renderFullDoc()>FullDoc</button>
         </div>
         <h2>Render</h2>
         <div id="viewer" class="viewer">
