agrego funcionalidad al bloque de texto

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div id="main-container">
-        <h2>Render</h2>
+        <h2>Notas</h2>
         <div id="viewer" class="viewer">
         </div>
         <div class="spacer"></div>
         <div id="textInputCont">
             <textarea name="textInput" id="textInput" cols="30" rows="5"></textarea>
-            <button>Enviar</button>
+            <button onclick=textEntry()>Enviar</button>
         </div>
         <div id="composer-container"></div>
         <div class="btn-container">
