--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
         <div id="composer-container"></div>
         <div class="btn-container">
-            <button class="boton" onclick=getFullDocument()>Documento</button>
+<!--             <button class="boton" onclick=getFullDocument()>Documento</button>
             <button class="boton" onclick=getAllMolecules()>Moleculas</button>
             <button class="boton" onclick=renderAll()>Painter All</button>
-            <button class="boton" onclick=renderFullDoc()>FullDoc</button>
-            <button class="boton" onclick=createDocBlock()>DockBlock</button>
+            <button class="boton" onclick=createDocBlock()>DockBlock</button> -->
+            <button class="boton" onclick=renderFullDoc()>Postear moléculas</button>
         </div>
 
         
