--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="spacer"></div>
         <div id="textInputCont">
-            <textarea name="textInput" id="textInput" cols="30" rows="5"></textarea>
-            <button onclick=textEntry()>Enviar</button>
+            <textarea name="textInput" id="textInput" placeholder="Introduce un comentario..." cols="30" rows="5"></textarea>
+            <button onclick=createTextEntry()>Enviar</button>
         </div>
         <div id="composer-container"></div>
         <div class="btn-container">
@@ -24,7 +24,7 @@
             <button class="boton" onclick=getAllMolecules()>Moleculas</button>
             <button class="boton" onclick=renderAll()>Painter All</button>
             <button class="boton" onclick=createDocBlock()>DockBlock</button> -->
-            <button class="boton" onclick=renderFullDoc()>Postear moléculas</button>
+            <button class="boton" onclick=renderEditorContent()>Postear moléculas</button>
         </div>
 
         
