--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 <!--             <button class="boton" onclick=getFullDocument()>Documento</button>
             <button class="boton" onclick=getAllMolecules()>Moleculas</button>
             <button class="boton" onclick=renderAll()>Painter All</button>
-            <button class="boton" onclick=createDocBlock()>DockBlock</button> -->
+            <button class="boton" onclick=createChemBlock()>DockBlock</button> -->
             <button class="boton" onclick=renderEditorContent()>Postear moléculas</button>
         </div>
-
-        
+        <div class="spacer"></div>        
     </div>
     <script src="js/raphael-2.3.0/raphael.min.js"></script>
     <script src="js/kekule/kekule.min.js"></script>
